# agents2

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COURSE-PLAN.md  README.md  SECURITY.md  SUPPORT.md
contoso-hr-agent/: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CODE_WALKTHROUGH.md  README.md  pyproject.toml  smoke_test.py
contoso-hr-agent/deploy/: Dockerfile  README.md  deploy.ps1
contoso-hr-agent/docs/: MCP_INSPECTOR_DRILL.md
contoso-hr-agent/sample_knowledge/: Contoso-HR-Policy-v2.docx  hr_policy_compensation.md  hr_policy_edi.md  hr_policy_hiring.md
contoso-hr-agent/sample_resumes/: RESUME_Alex_Rivera_Tech_Professional.txt  RESUME_Alice_Zhang_Azure_Trainer-v1.txt  RESUME_Bob_Martinez_M365_Trainer-v1.txt  RESUME_Carol_Okonkwo_Data_Trainer-v1.txt  RESUME_David_Kim_Finance_PM-v1.txt  RESUME_David_Park_M365_Security_Trainer-v2.txt  RESUME_James_Okafor_Security_Compliance_Trainer-v2.txt  RESUME_Kevin_Walsh_Marketing_Manager-v2.txt  RESUME_Marcus_Johnson_Cloud_Engineer-v2.txt  RESUME_Priya_Kapoor_Azure_AI_Engineer-v2.txt  RESUME_Rachel_Torres_Azure_DevOps_Trainer-v2.txt  RESUME_Sarah_Chen_AZ-104_Trainer-v3.txt  RESUME_Tomoko_Sato_Technical_Educator-v2.txt
contoso-hr-agent/scripts/: setup.ps1  setup.sh  start.ps1  start.sh  start_mcp.ps1  start_mcp.sh
contoso-hr-agent/src/contoso_hr/: __init__.py  config.py  engine.py  logging_setup.py  models.py
contoso-hr-agent/tests/: test_mcp_server.py  test_models.py  test_pipeline.py  test_watcher.py
contoso-hr-agent/web/: candidates.html  candidates.js  chat.html  chat.js  meta.html  rai.html  runs.html  runs.js  site.webmanifest  style.css
docs/: DEBUGGING.md  (+14 more)
(+32 files in other folders)
